responded to PR comments for the EmailManagerTest file